# simple-wayland-compositor

wayland-compositor/: CMakeLists.txt
